# DuckerEngine

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  cube.hlsl  texture.hlsl  vcpkg.json
android-project/: local.properties
android-project/app/: build.gradle
android-project/app/jni/: Application.mk
android-project/app/jni/src/: Android.mk
scripts/: dxc.ps1
src/: CMakeLists.txt  engine.cpp  engine.h  frametimer.cpp  frametimer.h  main.cpp  window.cpp  window.h
src/graphics/: CMakeLists.txt  buffermanager.cpp  buffermanager.h  drawbuffer.cpp  drawbuffer.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  painter.cpp  painter.h  program.cpp  program.h  renderbuffer.cpp  renderbuffer.h  shaders.cpp  shaders.h
src/graphics/buffer/: CMakeLists.txt  bufferchunk.cpp  bufferchunk.h  buffermanager.cpp  buffermanager.h
src/graphics/shaders/: CMakeLists.txt  program.cpp  program.h  shaders.cpp  shaders.h  shaders_d3d12.cpp  shaders_vulkan.cpp
src/graphics/texture/: CMakeLists.txt  texture.cpp  texture.h
src/ui/: CMakeLists.txt  ui.cpp  ui.h
src/utils/: color.h  include.h  matrix.h  point.h  rect.h  size.h
